tdf#159175 Do not allocate a CGLayer for each NSWindow when using Skia

Skia surfaces can be copied directly to an NSWindow's CGContextRef
so disable allocation of a CGLayer for each NSWindow to significantly
reduce memory usage when Skia is enabled.

Change-Id: I8e3001e4f2ae8dd36156c06db68447c6b1bc67df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169242
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 12dbf0e6b6b485a1d73c7e33bd0ecfb13e6efdac)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169559
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>